# octissimo

./: .gitignore  CMakeLists.txt  GithubStatus.cpp  GithubStatus.h  LICENSE  README.md  Request.cpp  Request.h  main.cpp  resource.h  resource.rc  win.h
include/: httplib.h
